--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,16 @@ endpoints.shutdown.sensitive=false
 endpoints.sensitive=false
 #Enable shutdown endpoint
 endpoints.shutdown.enabled=true
+# -------- SRPING MVC
+spring.mvc.view.prefix=/resources/templates/
+spring.mvc.view.suffix=.jsp
+spring.mvc.static-path-pattern=/resources/**
+# -------- Logging --------
+logging.file=log/spring.log
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:-%5p} - %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
+logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) - %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
 
 ui.hello.message = Hello dupa, my old friend!
