Added sample JSP Page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,12 @@ endpoints.shutdown.sensitive=false
 endpoints.sensitive=false
 #Enable shutdown endpoint
 endpoints.shutdown.enabled=true
+
 # -------- SRPING MVC
-spring.mvc.view.prefix=/resources/templates/
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-spring.mvc.static-path-pattern=/resources/**
+#spring.mvc.static-path-pattern=/resources/**
+
 # -------- Logging --------
 logging.file=log/spring.log
 logging.level.root=INFO
