--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- JSON Mapper -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
