shuffling list to get random entry when ranks are equal

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mvc.view.suffix=.jsp
 #spring.mvc.static-path-pattern=/resources/**
 
 # -------- Logging --------
-logging.file=log/spring.log
+logging.file=log/webdict.log
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
