--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>igrek.webdict</groupId>
     <artifactId>webdict</artifactId>
-    <version>0.2.1-SNAPSHOT</version>
+    <version>1.0.1</version>
 
     <packaging>war</packaging>
 
