Optimization of hibernate query returning missing ranks

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-server.port = 8081
-
+server.port=8081
 # -------- SPRING BOOT ACTUATOR --------
 management.security.enabled=false
 #No auth protected
@@ -7,7 +6,6 @@ endpoints.shutdown.sensitive=false
 endpoints.sensitive=false
 #Enable shutdown endpoint
 endpoints.shutdown.enabled=true
-
 # -------- Logging --------
 logging.file=log/webdict.log
 logging.level.root=INFO
@@ -15,11 +13,10 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=ERROR
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss.SSS} ${LOG_LEVEL_PATTERN:-%5p} - %-40.40logger{39} : %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
 logging.pattern.console=%clr(%d{yyyy-MM-dd HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:-%5p}) - %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:-%wEx}
-
 # -------- DB --------
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/webdict?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=webdict
 spring.datasource.password=Sh4QqTvAwR8TwzlW
-# build version number
+# -------- build version number --------
 info.build.version=@project.version@
