Testing, production and developmnet environments

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.datasource.username=webdict
 spring.datasource.password=Sh4QqTvAwR8TwzlW
 # -------- build version number --------
 info.build.version=@project.version@
+# -------- development environment --------
+info.build.env=WebDict-dev
+# -------- store maven build-time profile as spring runtime profile --------
+spring.profiles.active=@spring.profiles.active@
