--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,8 @@
 
     <groupId>igrek.webdict</groupId>
     <artifactId>webdict</artifactId>
-    <version>1.0.10-SNAPSHOT</version>
-
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-
     <name>webdict</name>
 
     <parent>
@@ -23,35 +21,33 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <spring.profiles.active>default</spring.profiles.active>
     </properties>
 
-    <!-- propagate maven profile in order to enable spring profile -->
     <profiles>
+        <!-- propagate maven build-time profile to enable spring runtime profile -->
         <profile>
             <id>memdb</id>
+            <properties>
+                <spring.profiles.active>memdb</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <spring.profiles.active>test</spring.profiles.active>
+            </properties>
             <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>properties-maven-plugin</artifactId>
-                        <version>1.0.0</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>set-system-properties</goal>
-                                </goals>
-                                <configuration>
-                                    <properties>
-                                        <property>
-                                            <name>spring.profiles.active</name>
-                                            <value>memdb</value>
-                                        </property>
-                                    </properties>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
+                <finalName>webdict-test</finalName>
+            </build>
+        </profile>
+        <profile>
+            <id>prod</id>
+            <properties>
+                <spring.profiles.active>prod</spring.profiles.active>
+            </properties>
+            <build>
+                <finalName>webdict</finalName>
             </build>
         </profile>
     </profiles>
@@ -141,7 +137,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
-        <finalName>webdict</finalName>
+        <finalName>webdict-dev</finalName>
     </build>
 
 </project>
