--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ endpoints.shutdown.sensitive=false
 endpoints.sensitive=false
 #Enable shutdown endpoint
 endpoints.shutdown.enabled=true
+# multiple instances fix
+endpoints.jmx.enabled=false
+endpoints.jmx.unique-names=true
 # -------- DB --------
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/webdict?useUnicode=yes&characterEncoding=UTF-8
