--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <!--Lombok-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
