Revise application profiles properties

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,4 +3,6 @@ info.build.env=WebDict-test
 # -------- DB --------
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/webdict-test?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=webdict
+spring.datasource.password=Sh4QqTvAwR8TwzlW
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
