--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,24 @@
 server.port=8081
-# -------- SPRING BOOT ACTUATOR --------
+# -------- SPRING BOOT ACTUATOR
 management.security.enabled=false
-#No auth protected
-endpoints.shutdown.sensitive=false
 endpoints.sensitive=false
-#Enable shutdown endpoint
+endpoints.shutdown.sensitive=false
 endpoints.shutdown.enabled=true
 # multiple instances fix
 endpoints.jmx.enabled=false
 endpoints.jmx.unique-names=true
-# -------- DB --------
+# -------- Database
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=webdict
-spring.datasource.password=Sh4QqTvAwR8TwzlW
 # -------- H2
 spring.jpa.database=h2
-#spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.username=sa
+spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# -------- build version number --------
+# -------- build version number
 info.build.version=@project.version@
-# -------- development environment --------
+# -------- development environment
 info.build.env=WebDict-dev
-# -------- store maven build-time profile as spring runtime profile --------
+# -------- store maven build-time profile as spring runtime profile
 spring.profiles.active=@spring.profiles.active@
-
