Fix DB initializing on tests run

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,10 @@ spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.h2.console.path=/h2
 # -------- build version number
 info.build.version=@project.version@
 # -------- development environment
 info.build.env=WebDict-dev
-# -------- store maven build-time profile as spring runtime profile
+# -------- save maven build-time profile as spring runtime profile
 spring.profiles.active=@spring.profiles.active@
