--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
-# -------- Production environment --------
+# -------- Production environment
 info.build.env=WebDict
-# -------- DB --------
+# -------- Database
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/webdict?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=webdict
+# don't worry - it's only locally accessible
 spring.datasource.password=Sh4QqTvAwR8TwzlW
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
