--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ endpoints.jmx.unique-names=true
 spring.jpa.hibernate.ddl-auto=update
 # -------- H2
 spring.jpa.database=h2
-spring.datasource.url=jdbc:h2:mem:db
+spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=true
