Move domain entities to proper packages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 server.port=8081
-# -------- SPRING BOOT ACTUATOR
+# -------- Spring Boot Actuator
 management.security.enabled=false
 endpoints.sensitive=false
-endpoints.shutdown.sensitive=false
 endpoints.shutdown.enabled=true
-# multiple instances fix
+# -------- multiple instances fix
 endpoints.jmx.enabled=false
 endpoints.jmx.unique-names=true
 # -------- Database
