add bulk changing ranks by offset
revise test db data
add hibernate sql logging on dev env

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,8 +1,12 @@
 # -------- Testing environment
 info.build.env=WebDict-test
 # -------- Database
+spring.h2.console.enabled=false
 spring.jpa.database=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/webdict-test?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=webdict
 # don't worry - it's only locally accessible
 spring.datasource.password=Sh4QqTvAwR8TwzlW
+# -------- Hibernate
+logging.level.org.hibernate.SQL=error
+logging.level.org.hibernate.type.descriptor.sql=error
