--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # -------- Hibernate logging
-logging.level.org.hibernate.SQL=debug
-logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.org.hibernate.SQL=debug
+#logging.level.org.hibernate.type.descriptor.sql=trace
 # -------- build version number
 info.build.version=@project.version@
 # -------- development environment
