Add Top word and statistics components, revise REST controllers
clean up alerts service
move styles to proper component css
add new word action on enter key
improve checking is http status ok
add statistics component
add top word component
rename profile sampledata -> data
make statistics controller RESTful
fix PayloadResponse generic types check

--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,9 @@
         <!-- propagate maven build-time profile to enable spring runtime profile -->
         <profile>
             <!--db with test data-->
-            <id>sampledata</id>
+            <id>data</id>
             <properties>
-                <spring.profiles.active>sampledata</spring.profiles.active>
+                <spring.profiles.active>data</spring.profiles.active>
             </properties>
         </profile>
         <profile>
