--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build --prod",
+    "build": "ng build --prod --output-path ../main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
