--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "^6.0.0-rc.5",
     "@angular/platform-browser-dynamic": "^6.0.0-rc.5",
     "@angular/router": "^6.0.0-rc.5",
-    "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
@@ -30,25 +30,25 @@
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.6.0",
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^6.0.0-rc.5",
     "@angular/language-service": "^6.0.0-rc.5",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasmine": "^2.8.3",
+    "@types/jasminewd2": "^2.0.2",
     "@types/jquery": "^3.3.1",
-    "@types/node": "~6.0.60",
+    "@types/node": "^10.0.4",
     "codelyzer": "^4.3.0",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "karma": "^2.0.2",
-    "karma-chrome-launcher": "~2.2.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-jasmine-html-reporter": "^1.0.0",
+    "protractor": "^5.1.2",
+    "ts-node": "^6.0.2",
+    "tslint": "^5.10.0",
     "typescript": "^2.7.2"
   }
 }
