--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk: oraclejdk8
 
 before_install:
   - npm install -g @angular/cli@6
-  - cd src/frontend && npm install
+  - cd src/frontend && npm install && cd ../..
 
 script:
   - mvn test package -B
