--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -7,23 +7,25 @@ services:
       dockerfile: deploy/docker/webdict/Dockerfile
     image: webdict
     container_name: webdict
-    network_mode: host
     restart: unless-stopped
     depends_on:
       - mysql
+    links:
+      - mysql:db
+    ports:
+      - "8081:8081"
 
   mysql:
     image: mysql:5.7
     container_name: mysql
-#    network_mode: host
     restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=Sh4QqTvAwR8TwzlW
-      - MYSQL_DATABASE=webdict
-      - MYSQL_USER=webdict
       - MYSQL_PASSWORD=Sh4QqTvAwR8TwzlW
-#      - MYSQL_ROOT_HOST=localhost
-#      - MYSQL_RANDOM_ROOT_PASSWORD=yes
+      - MYSQL_USER=webdict
+      - MYSQL_DATABASE=webdict
+    ports:
+      - "127.0.0.1:3306:3306"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
