--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -3,7 +3,7 @@ info.build.env=WebDict-test
 # -------- Database
 spring.h2.console.enabled=false
 spring.jpa.database=mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/webdict-test?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://db:3306/webdict-test?useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=webdict
 # don't worry - it's only locally accessible
 spring.datasource.password=Sh4QqTvAwR8TwzlW
