--- a/deploy/ansible/inventory.yaml
+++ b/deploy/ansible/inventory.yaml
@@ -7,12 +7,13 @@ all:
     ansible_user: root
     ask_pass: true
     ssh_args: "-o PubkeyAuthentication=yes -o PasswordAuthentication=yes -o ControlMaster=auto -o ControlPersist=60s"
-    component_name: webdict
-    component_dir: "/opt/{{ component_name }}"
+    app_name: webdict
+    app_dir: "/opt/{{ app_name }}"
     built_components:
       - webdict
-    component_dirs:
-      - "{{ component_dir }}/volumes/db"
+    app_dirs:
+      - "{{ app_dir }}"
+      - "{{ app_dir }}/volumes/db"
     copy_sources:
       - "webdict.tar.gz"
       - "docker-compose.remote.yaml"
