--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -10,3 +10,5 @@ spring.datasource.password=Sh4QqTvAwR8TwzlW
 # -------- Hibernate
 logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type.descriptor.sql=error
+server.servlet.context-path=/webdict
+server.servlet.contextPath=/webdict
