--- a/deploy/docker-compose.remote.yaml
+++ b/deploy/docker-compose.remote.yaml
@@ -10,7 +10,7 @@ services:
     links:
       - mysql:db
     ports:
-      - "8081:8081"
+      - "8080:8081"
 
   mysql:
     image: mysql:5.7
@@ -34,6 +34,7 @@ services:
       - MYSQL_ROOT_PASSWORD=Sh4QqTvAwR8TwzlW
       - MYSQL_USER=webdict
       - MYSQL_PASSWORD=Sh4QqTvAwR8TwzlW
+      - PMA_ABSOLUTE_URI=/pma
     depends_on:
       - mysql
     links:
