Add base url prefix to API paths

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -11,4 +11,4 @@ spring.datasource.password=Sh4QqTvAwR8TwzlW
 logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type.descriptor.sql=error
 server.servlet.context-path=/webdict
-server.servlet.contextPath=/webdict
+server.contextPath=/webdict
